--- a/app/views/bonspiels/_team_fields.html.erb
+++ b/app/views/bonspiels/_team_fields.html.erb
@@ -1,20 +1,20 @@
 <div class="field">
-  <%= builder.label :name %><br />
-  <%= builder.text_field :name %>
+  <%= f.label :name %><br />
+  <%= f.text_field :name %>
 </div>
 <div class="field">
-  <%= builder.label :club %><br />
-  <%= builder.text_field :club %>
+  <%= f.label :club %><br />
+  <%= f.text_field :club %>
 </div>
 <div class="field">
-  <%= builder.label :city %><br />
-  <%= builder.text_field :city %>
+  <%= f.label :city %><br />
+  <%= f.text_field :city %>
 </div>
 <div class="field">
-  <%= builder.label :state %><br />
-  <%= builder.text_field :state %>
+  <%= f.label :state %><br />
+  <%= f.text_field :state %>
 </div>
 <div class="field">
-  <%= builder.label :country %><br />
-  <%= builder.text_field :country %>
+  <%= f.label :country %><br />
+  <%= f.text_field :country %>
 </div>
